@@ -25,3 +25,6 @@
 /account_balance_transaction/modify_foreign_key_non_null.sql
 /stock_daily_price/modify_foreign_key_non_null.sql
 /stock_daily_price/rename_event_time_to_event_date.sql
+/transaction_type/remove_fee_rate_column.sql
+/portfolio/remove_fee_and lock_add_members_and_followers.sql
+/portfolio/add_unique_index_name_and_user_id.sql
